tests/baselines/reference/esDecorators-decoratorExpression.1(experimentaldecorators=true).errors.txt
esDecorators-decoratorExpression.1.ts(3,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(5,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(7,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(9,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(11,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(13,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(15,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(17,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(19,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(21,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(23,4): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(25,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(27,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(29,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(31,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(33,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(35,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(37,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(39,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(41,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(43,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
esDecorators-decoratorExpression.1.ts(45,14): error TS1497: Expression must be enclosed in parentheses to be used as a decorator.


==== esDecorators-decoratorExpression.1.ts (22 errors) ====
    declare let x: any;
    
    { @x().y class C {} }
       ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:3:4: Invalid syntax in decorator.
    
    { @new x class C {} }
       ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:5:4: Invalid syntax in decorator.
    
    { @x().y() class C {} }
       ~~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:7:4: Invalid syntax in decorator.
    
    { @x?.y class C {} }
       ~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:9:5: Invalid syntax in decorator.
    
    { @x?.y() class C {} }
       ~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:11:5: Invalid syntax in decorator.
    
    { @x?.["y"] class C {} }
       ~~~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:13:4: Invalid syntax in decorator.
    
    { @x?.() class C {} }
       ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:15:5: Invalid syntax in decorator.
    
    { @x`` class C {} }
       ~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:17:4: Invalid syntax in decorator.
    
    { @x``() class C {} }
       ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:19:4: Invalid syntax in decorator.
    
    { @x.y`` class C {} }
       ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:21:4: Invalid syntax in decorator.
    
    { @x.y``() class C {} }
       ~~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:23:4: Invalid syntax in decorator.
    
    { class C { @x().y m() {} } }
                 ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:25:14: Invalid syntax in decorator.
    
    { class C { @new x m() {} } }
                 ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:27:14: Invalid syntax in decorator.
    
    { class C { @x().y() m() {} } }
                 ~~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:29:14: Invalid syntax in decorator.
    
    { class C { @x?.y m() {} } }
                 ~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:31:15: Invalid syntax in decorator.
    
    { class C { @x?.y() m() {} } }
                 ~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:33:15: Invalid syntax in decorator.
    
    { class C { @x?.["y"] m() {} } }
                 ~~~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:35:14: Invalid syntax in decorator.
    
    { class C { @x?.() m() {} } }
                 ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:37:15: Invalid syntax in decorator.
    
    { class C { @x`` m() {} } }
                 ~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:39:14: Invalid syntax in decorator.
    
    { class C { @x``() m() {} } }
                 ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:41:14: Invalid syntax in decorator.
    
    { class C { @x.y`` m() {} } }
                 ~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:43:14: Invalid syntax in decorator.
    
    { class C { @x.y``() m() {} } }
                 ~~~~~~~
!!! error TS1497: Expression must be enclosed in parentheses to be used as a decorator.
!!! related TS1498 esDecorators-decoratorExpression.1.ts:45:14: Invalid syntax in decorator.
    